--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver  
 jdbc.url=jdbc:mysql://127.0.0.1:3306/traindb?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
 jdbc.username=root
-jdbc.password=1234
+jdbc.password=root
